--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "oj":"latest",
+    "underscore":"latest",
     "coffee-script": "~1.6.1",
     "mocha": "~1.1.0",
     "chai": "~1.0.3",
