--- a/package.json
+++ b/package.json
@@ -1,24 +1,17 @@
 {
-  "name": "oj-markdown",
-  "version": "0.0.2",
+  "name": "oj.markdown",
+  "version": "0.0.1",
   "main": "src/oj.markdown.js",
   "description": "Markdown plugin for oj",
   "homepage": "http://github.com/ojjs/oj-markdown/",
   "keywords": [
     "oj",
-    "markdown"
+    "markdown",
+    "marked"
   ],
   "author": "Evan Moran <evan@evanmoran.com>",
   "dependencies": {
     "marked": "latest"
-  },
-  "devDependencies": {
-    "oj":"latest",
-    "underscore":"latest",
-    "coffee-script": "~1.6.1",
-    "mocha": "~1.1.0",
-    "chai": "~1.0.3",
-    "jquery": "~1.8.2"
   },
   "repository": {
     "type": "git",
