--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "oj.markdown",
-  "version": "0.0.1",
+  "name": "oj-markdown",
+  "version": "0.2.9",
   "main": "src/oj.markdown.js",
   "description": "Markdown plugin for oj",
-  "homepage": "http://github.com/ojjs/oj.markdown/",
+  "homepage": "http://ojjs.org",
   "keywords": [
     "oj",
     "markdown",
@@ -11,7 +11,6 @@
   ],
   "author": "Evan Moran <evan@evanmoran.com>",
   "dependencies": {
-    "marked": "latest"
   },
   "repository": {
     "type": "git",
